# kaggle-csiro-image2biomass

./: .gitignore  README.md  kaggle_setup.md  pyproject.toml  requirements.txt
notebooks/: 01_deep_dive_eda.ipynb  01_eda_baseline.ipynb  02_baseline_models.ipynb  03_image_embedding_experiments.ipynb  04_tabular_model_tuning.ipynb
src/csiro_biomass/: __init__.py  data.py  features.py  metrics.py
