[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csiro-biomass"
version = "0.1.0"
description = "Starter utilities for the CSIRO Biomass Kaggle competition"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pillow>=10.0",
    "tqdm>=4.66",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["src"]
